# hadoop_local_practice

./: .gitignore  README.md  docker-compose.yml  fresh_start.sh  hadoop-hive.env  main.py  pyproject.toml
data/: transactions.csv  transactions_sample.json
exercises/: HOW_TO_USE.md  hdfs_exercises.sh  hive_exercises.sh  mapreduce_exercises.sh  run_all_exercises.sh  spark_exercises.sh
jobs/: migrate_to_delta.py  spark_analytics.py  spark_streaming.py
mapreduce/: mapper.py  reducer.py  wordcount_mapper.py  wordcount_reducer.py
nifi/: README.md  core-site.xml  docker-compose.nifi.yml  docker-compose.yml
nifi/agent/: README.md  convert_nifi_xml.py  extract_clean_output.py  nifi_databricks_agent.py  nifi_notebook_converter.py  test_agent.py  test_llm_connection.py
nifi/data/: sample_logs.json  sample_sensor_data.csv
nifi/databricks_migration/: migration_guide.md
nifi/databricks_migration/notebooks/: csv_to_delta_translated.py  manual_translation_example.py  nifi_equivalent_pipeline.py
nifi/flows/: csv_to_hdfs_template.xml  sample_flow_template.xml
nifi/scripts/: README_translator.md  generate_streaming_data.py  nifi_to_databricks_translator.py  start_nifi.sh
scripts/: generate_data.py  generate_data.sh  hdfs_commands.sh  hive_queries.sql  hive_setup.sql  optimization_demo.sql  run_all.sh
